@@ -5,6 +5,7 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -12,6 +13,7 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 import com.example.foodflow.repository.UserRepository;
 import java.util.List;
+import java.util.Collections;
 
 import java.io.IOException;
 
@@ -48,9 +50,11 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             if (user != null && jwtTokenProvider.validateToken(token)) {
                 SimpleGrantedAuthority authority = new SimpleGrantedAuthority(user.getRole().name());
                 UsernamePasswordAuthenticationToken authToken =
-                        new UsernamePasswordAuthenticationToken(
-                                user, null, List.of(authority)
-                        );
+                    new UsernamePasswordAuthenticationToken(
+                        user, 
+                        null, 
+                        Collections.singletonList(new SimpleGrantedAuthority(user.getRole().name()))
+                    );
                 authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                 SecurityContextHolder.getContext().setAuthentication(authToken);
             }
